--- a/Code/RikkeiAcademyShop.html
+++ b/Code/RikkeiAcademyShop.html
@@ -4,16 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rikkei Academy Shop</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <style>
+    .title{
+        font-size: 30px;
+        font-weight: 500;
+    }
     .header{
         display: flex;
+        background-color: #f5442e;
+        justify-content: space-around;
+        align-items: center;
+        color: white;
+        padding: 10px 0;
+    }
+    .search{
+        padding-top: 5px;
+        padding-bottom: 5px;
+        padding-right: 200px;
     }
 </style>
 <body>
     <div class="header">
         <spam class="title">RIKKEI_ACADEMY_SHOP</spam>
-        <input type="text" id="search" name="search" placeholder="Tìm kiếm theo tên sản phẩm">
+        <input type="text" id="search" name="search" class="search" placeholder="Tìm kiếm theo tên sản phẩm">
         <div class="search">
             <i class="fa-solid fa-magnifying-glass"></i>
         </div>
@@ -117,7 +132,40 @@
     </div>
 </body>
 <footer>
-    <p>Chăm sóc khách hàng</p>
-    <p>Trung tâm trợ giúp</p>
+    <div>
+        <p>Chăm sóc khách hàng</p>
+        <p>Trung tâm trợ giúp</p>
+        <p>Hướng dẫn mua hàng</p>
+    </div>
+    <div>
+        <p>Giới thiệu</p>
+        <p>Điều khoản</p>
+        <p>Chính sách bảo mật</p>
+        <p>Tuyển dụng</p>
+    </div>
+    <div>
+        <p>Danh mục sản phẩm</p>
+        <p>Thời trang</p>
+        <p>Đồ tiêu dùng</p>
+        <p>Thiết bị điện tử</p>
+        <p>Sách</p>
+    </div>
+    <div>
+        <p>Danh mục sản phẩm</p>
+        <p>Thời trang</p>
+        <p>Đồ tiêu dùng</p>
+        <p>Thiết bị điện tử</p>
+        <p>Sách</p>
+    </div>
+    <div>
+        <p>Theo dõi chúng tôi</p>
+        <p>Facebook</p>
+        <p>Instagram</p>
+        <p>Twitter</p>
+    </div>
+    <div>
+        <p>Đội ngũ phát triển</p>
+        <p>Nguyễn Cảnh Toàn</p>
+    </div>
 </footer>
 </html>
